# Prediction-Market

./: .gitignore  CMakeLists.txt  README.md
docs/: dev-log.md  engine-notes.md  go-plan.md  plan.md
engine/: CMakeLists.txt  README.md  compile_commands.json  temp_notes.txt
engine/benchmark_results/scripts/: analyze_compaction_study.py  compaction_ratios.sh
engine/benchmarks/: order_generator.cpp  order_generator.hpp  orderbook_bench.cpp
engine/benchmarks/scripts/: analyze_compaction_study.py  compaction_ratios.sh
engine/include/: exchange.hpp  grpc_server.hpp  order.hpp  orderbook.hpp  thread_queue.hpp
engine/proto/: exchange.proto
engine/src/: exchange.cpp  grpc_server.cpp  main_server.cpp  order.cpp  orderbook.cpp
engine/tests/: test.cpp
go-backend/: go.mod
go-backend/cmd/api/: main.go
proto/: exchange.proto
